--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   # mysql
   mysql:
-    image: "mysql:5.7.37"
+    image: "arm64v8/mysql"
     container_name: "typeorm-mysql"
     ports:
       - "3306:3306"
