Add support for PlanetScale and Cloudflare
* Add PlanetScaleDriver which uses the PlanetScale Serverless driver for Javascript.
* Add PlanetScaleQueryRunner which is a customized version of the MySqlQueryRunner that removes incompatibilities with PlanetScale.
* Add the new DataSourceOption flag disableForeignKeyConstraints to disable foreign keys globally for a database.
* Update unit tests to pass with PlanetScale enabled.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,18 @@ services:
       MYSQL_PASSWORD: "test"
       MYSQL_DATABASE: "test"
 
+  # mysql arm
+  mysql-arm64:
+    image: "arm64v8/mysql"
+    container_name: "typeorm-mysql"
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: "admin"
+      MYSQL_USER: "test"
+      MYSQL_PASSWORD: "test"
+      MYSQL_DATABASE: "test"
+
   # mariadb
   mariadb:
     image: "mariadb:10.10.3"
