--- a/src/platform/BrowserPlatformTools.template
+++ b/src/platform/BrowserPlatformTools.template
@@ -20,6 +20,9 @@ export class PlatformTools {
     static getGlobalVariable(): any {
         if (typeof window !== "undefined") {
             return window
+        } else if (typeof globalThis !== "undefined") {
+            // Cloudflare Workers uses globalThis
+            return globalThis
         } else {
             // NativeScript uses global, not window
             return global
@@ -168,6 +171,10 @@ interface Window {
 declare var window: Window;
 if (typeof window !== "undefined") {
     window.Buffer = Buffer;
+}
+// Cloudflare Workers uses globalThis
+if (typeof globalThis !== "undefined" && typeof require !== "undefined") {
+    globalThis.Buffer = require("buffer/").Buffer;
 }
 // NativeScript uses global, not window
 if (typeof global !== "undefined" && typeof require !== "undefined") {
