--- a/package.json
+++ b/package.json
@@ -228,7 +228,7 @@
     }
   },
   "dependencies": {
-    "@planetscale/database": "https://github.com/kamsheffield/planetscale-database-js/releases/download/v1.8.0-typeorm-cloudflare/planetscale-database-1.8.0.tgz",
+    "@planetscale/database": "^1.14.0",
     "@sqltools/formatter": "^1.2.5",
     "app-root-path": "^3.1.0",
     "buffer": "^6.0.3",
